--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,21 @@
-[project]
+[tool.poetry]
 name = "pyonwater"
 version = "0.1.0"
 description = "EyeOnWater client library."
+authors = ["Konstantin Deev <kn.deev@gmail.com>"]
 license = "MIT"
-repository = "https://github.com/kdeyev/pyonwater"
-homepage = "https://github.com/kdeyev/pyonwater"
-documentation = "https://github.com/kdeyev/pyonwater"
-requires-python = ">=3.8"
-dependencies = [
-    "aiohttp",
-    "tenacity",
-    "pytz"
-]
+readme = "README.md"
 
 [build-system]
-requires = ["setuptools", "setuptools-scm"]
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
 
-[tool.poetry]
-# ...
-readme = "README.md"
+[tool.poetry.dependencies]
+python = "^3.11"
+aiohttp = "^3.8.5"
+tenacity = "^8.2.3"
+pytz = "^2023.3"
+python-dateutil = "^2.8.2"
 
 [tool.black]
 target-version = ["py39", "py310"]
