--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,18 +8,18 @@ repos:
       - id: mixed-line-ending
         args: ["--fix=lf"]
 
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.0.284
+  # - repo: https://github.com/astral-sh/ruff-pre-commit
+  #   rev: v0.0.284
+  #   hooks:
+  #     - id: ruff
+  #       args: ["--fix"]
+
+  - repo: https://github.com/psf/black
+    rev: 23.7.0
     hooks:
-      - id: ruff
-        args: ["--fix"]
+      - id: black
 
-  # - repo: https://github.com/psf/black
-  #   rev: 23.7.0
-  #   hooks:
-  #     - id: black
-
-  # - repo: https://github.com/PyCQA/isort
-  #   rev: 5.12.0
-  #   hooks:
-  #   - id: isort
+  - repo: https://github.com/PyCQA/isort
+    rev: 5.12.0
+    hooks:
+    - id: isort
