--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ aiohttp = "^3.8.5"
 tenacity = "^8.2.3"
 pytz = "^2023.3"
 python-dateutil = "^2.8.2"
+pydantic = "^2.2.1"
 
 [tool.black]
 target-version = ["py39", "py310"]
