--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,9 +35,9 @@ combine_as_imports = true
 
 [tool.ruff]
 select = [
-    #"D1",  # pydocstyle errors
-    #"E",  # pycodestyle errors
-    #"W",  # pycodestyle warnings
+    "D1",  # pydocstyle errors
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
     "F",  # flake8
     "C",  # flake8-comprehensions
     "B",  # flake8-bugbear
