--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ combine_as_imports = true
 
 [tool.ruff]
 select = [
+    #"ALL",
     "D1",  # pydocstyle errors
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
@@ -45,7 +46,6 @@ select = [
     "ISC",  # implicit string concatenation
     "UP",  # alert you when better syntax is available in your python version
     "RUF",  # the ruff developer's own rules
-
 ]
 ignore = [
     "E501",  # line too long, handled by black
