--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyonwater"
-version = "0.2.1"
+version = "0.2.2"
 description = "EyeOnWater client library."
 authors = ["Konstantin Deev <kn.deev@gmail.com>"]
 license = "MIT"
@@ -16,7 +16,7 @@ aiohttp = "^3.8.5"
 tenacity = "^8.2.3"
 pytz = "^2023.3"
 python-dateutil = "^2.8.2"
-pydantic = "^2.2.1"
+pydantic = "<2"
 
 [tool.poetry.group.dev.dependencies]
 types-pytz = "^2023.3.0.1"
