--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ pydantic = "<2"
 
 [tool.poetry.group.dev.dependencies]
 types-pytz = "^2023.3.0.1"
+pytest = "*"
+pytest-asyncio = "*"
+pytest-aiohttp = "*"
 
 [tool.black]
 target-version = ["py39", "py310"]
@@ -67,3 +70,12 @@ warn_unused_ignores = true
 no_implicit_optional = true
 show_error_codes = true
 implicit_reexport = true
+exclude = ['venv', '.venv', 'tests']
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra -q"
+testpaths = [
+    "tests"
+]
+asyncio_mode = "auto"
