--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -1,9 +1,10 @@
 name: coverage
 
 on:
-  push:
-    branches:
-      - master
+    push:
+    pull_request:
+    schedule:
+      - cron:  '0 0 * * *'
 
 jobs:
   codecov:
