--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -45,7 +45,7 @@ jobs:
       #    run test suite and output coverage file
       #----------------------------------------------
       - name: Test with pytest
-        run: poetry run pytest --cov=<project-dir> --cov-report=xml
+        run: poetry run pytest --cov=. --cov-report=xml
 
       - name: Pytest coverage comment
         uses: MishaKav/pytest-coverage-comment@main
