--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,10 @@ pydantic = "<2"
 
 [tool.poetry.group.dev.dependencies]
 types-pytz = "^2023.3.0.1"
-pytest = "*"
-pytest-asyncio = "*"
-pytest-aiohttp = "*"
-pytest-cov = "*"
+pytest = "^7.4.1"
+pytest-asyncio = "^0.21.1"
+pytest-aiohttp = "^1.0.4"
+pytest-cov = "^4.1.0"
 
 [tool.black]
 target-version = ["py39", "py310"]
