--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -51,3 +51,9 @@ jobs:
       #----------------------------------------------
       - name: Test with pytest
         run: poetry run pytest --cov-fail-under=90 --cov=. --cov-report=xml  --cov-report=term
+
+      - name: Get Cover
+        uses: orgoro/coverage@v3.1
+        with:
+            coverageFile: path/to/coverage.xml
+            token: ${{ secrets.GITHUB_TOKEN }}
