--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -1,10 +1,10 @@
 name: coverage
 
 on:
-    push:
     pull_request:
-    schedule:
-      - cron:  '0 0 * * *'
+        branches:
+            - master
+            - main
 
 jobs:
   codecov:
