--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -1,10 +1,10 @@
 name: coverage
 
 on:
+    push:
     pull_request:
-        branches:
-            - master
-            - main
+    schedule:
+      - cron:  '0 0 * * *'
 
 jobs:
   codecov:
@@ -50,15 +50,4 @@ jobs:
       #    run test suite and output coverage file
       #----------------------------------------------
       - name: Test with pytest
-        run: poetry run pytest --cov-fail-under=00 --cov=. --cov-report=xml  --cov-report=term
-
-    #   - name: Get Cover
-    #     uses: orgoro/coverage@v3.1
-    #     with:
-    #         coverageFile: coverage.xml
-    #         token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Pytest coverage comment
-        uses: MishaKav/pytest-coverage-comment@main
-        with:
-            pytest-xml-coverage-path: ./coverage.xml
+        run: poetry run pytest --cov-fail-under=90 --cov=. --cov-report=xml  --cov-report=term
