--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "pyonwater"
-version = "0.3.0-beta.1"
+version = "0.3.0-beta.2"
 description = "EyeOnWater client library."
-authors = ["Konstantin Deev <kn.deev@gmail.com>"]
+authors = []
 license = "MIT"
 readme = "README.md"
 
