--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyonwater"
-version = "0.3.0-beta.2"
+version = "0.3.0"
 description = "EyeOnWater client library."
 authors = []
 license = "MIT"
