try to run coverall

--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -54,7 +54,7 @@ jobs:
         run: poetry run coverage run -m pytest tests
 
       - name: Upload coverage data to coveralls.io
-        run: coveralls --service=github
+        run: poetry run coveralls --service=github
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           COVERALLS_PARALLEL: true
