--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pytest = "^7.4.1"
 pytest-asyncio = "^0.21.1"
 pytest-aiohttp = "^1.0.4"
 pytest-cov = "^4.1.0"
+coverall = "^1.0.5"
 
 [tool.black]
 target-version = ["py39", "py310"]
