try to run coverall

--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -54,7 +54,9 @@ jobs:
         run: poetry run coverage run -m pytest tests
 
       - name: Upload coverage data to coveralls.io
-        run: poetry run coveralls --service=github
+        run: |
+          pip3 install --upgrade coveralls
+          coveralls --service=github
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           COVERALLS_PARALLEL: true
@@ -67,6 +69,7 @@ jobs:
     steps:
     - name: Finished
       run: |
+        pip3 install --upgrade coveralls
         coveralls --service=github --finish
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
