--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ aiohttp = "^3.8.5"
 tenacity = "^8.2.3"
 pytz = "^2023.3"
 python-dateutil = "^2.8.2"
-pydantic = "<2"
+pydantic = ">=1.10.17"
 
 [tool.poetry.group.dev.dependencies]
 types-pytz = "^2023.3.0.1"
