Feature/Python 3.14 Compatibility and Series Utilities (#36)
* chore: ignore VS Code files and local docs, relax Python constraint

- Add .vscode/, *.code-workspace to .gitignore
- Add docs/ and .phase1_results/ to .gitignore (local use only)
- Update Python constraint to >=3.9,<3.14 for compatibility

* chore: Update project configuration for Python 3.14 compatibility

- Bump version to 0.3.16
- Update Python constraint from <3.14 to <3.15
- Constrain pydantic to v1.x (>=1.10.17,<2)
- Add pylint extension-pkg-whitelist for pydantic C extension
- Add flake8 configuration with max-line-length=88
- Update poetry.lock with dependency resolution for Python 3.14

* refactor: Migrate from pydantic v2 to v1 API

Core API changes:
- model_validate() → parse_obj()
- model_validate_json() → parse_raw()
- ValidationError handling remains compatible

Files updated:
- models/eow_models.py: Updated meter info models
- models/eow_historical_models.py: Updated historical data models
- models/models.py: Updated base models
- models/units.py: Updated unit enumerations
- models/__init__.py: Updated exports
- meter_reader.py: Updated API response parsing (MeterInfo, HistoricalData, AtAGlanceData)
- client.py, account.py, meter.py: Updated any pydantic API calls

This migration enables Python 3.14 support while maintaining backward
compatibility with existing pydantic v1.10.17+ installations.

* feat: Add series utilities for data normalization and filtering

New module: pyonwater/series.py

Exports:
- filter_points_after(data, cutoff_time) → list[DataPoint]
  Efficiently filters data points to those occurring after a given timestamp

- enforce_monotonic_total(data) → list[DataPoint]
  Normalizes meter readings to ensure monotonic increasing values
  Prevents negative deltas that occur from data anomalies or resets

These utilities are designed for Home Assistant integration to:
1. Ensure historical data only increases (preventing negative statistics)
2. Enable efficient incremental dat

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,26 @@
 [tool.poetry]
 name = "pyonwater"
-version = "0.3.15"
+version = "0.3.16"
 description = "EyeOnWater client library."
 authors = []
 license = "MIT"
 readme = "README.md"
+packages = [
+    { include = "pyonwater" }
+]
+include = ["pyonwater/py.typed"]
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.15"
 aiohttp = "^3.8.5"
 tenacity = "^8.2.3"
 pytz = "^2023.3"
 python-dateutil = "^2.8.2"
-pydantic = ">=1.10.17"
+pydantic = ">=1.10.17,<2"
 
 [tool.poetry.group.dev.dependencies]
 types-pytz = "^2023.3.0.1"
@@ -61,6 +65,9 @@ ignore = [
 [tool.ruff.per-file-ignores]
 "tests/*.py" = ["D1"]
 
+[tool.flake8]
+max-line-length = 88
+
 [tool.mypy]
 plugins = ["pydantic.mypy"]
 strict = true
@@ -81,3 +88,6 @@ testpaths = [
     "tests"
 ]
 asyncio_mode = "auto"
+
+[tool.pylint.MASTER]
+extension-pkg-whitelist = ["pydantic"]
