--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,3 +81,9 @@ testpaths = [
     "tests"
 ]
 asyncio_mode = "auto"
+
+[tool.coverage.report]
+exclude_lines = [
+    "if TYPE_CHECKING:",
+    "pragma: no cover",
+]
